--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,6 @@
 * {
+    margin: 0;
+    padding: 0;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
@@ -90,12 +92,10 @@ span {
   display: flex;
   justify-content: space-between;
   margin-bottom: -10px;
-  margin-top: -5px;
+  margin-top: 10px;
   margin-right: -10px;
  margin-left:  -10px;
  padding-block: -10px;
- 
-
 
 }
 
@@ -183,10 +183,10 @@ justify-content: space-between;
     margin-top: 8px;
     }
 .main .trabajos .contenedor-trabajos .trabajo .thumb img {
-    width: 100%;
+    width: 85%;
     vertical-align: top;
     border-radius: 5px;
-    border: 5px solid rgba(0, 0, 0, 0.038) 
+     
 }
 
 .main .trabajos .contenedor-trabajos .trabajo .thumb img:hover 
@@ -277,7 +277,7 @@ footer .contacto .formulario .boton:hover {
 /*-----------footer redes-------*/
 
 footer .redes-sociales {
-    background: #1e2b38;
+    
     padding: 10px 0; 
     margin: 10px;
   
@@ -288,6 +288,8 @@ footer .redes-sociales {
       justify-content: space-around;
     
     }
+
+    .icord:hover {-webkit-transform:scale(1.3);transform:scale(1.5)};
 
   
   /* ----- ----- MEDIA QUERIES ----- ----- */
